# textual_extras

./: .gitignore  README.md  pyproject.toml
src/textual_extras/events/: events.py
src/textual_extras/widgets/: text_input.py
textual_extras/events/: __init__.py  events.py
textual_extras/widgets/: __init__.py  list.py  list_edit.py  multiline_text_input.py  nested_list_edit.py  notification.py  number_input.py  search_list.py  single_level_tree_edit.py  syntax_box.py  text_input.py
