[tool.poetry]
name = "textual_extras"
version = "0.1.0"
description = "A list of widgets for textual TUI"
authors = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.15"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
